--- a/apps/customer/package.json
+++ b/apps/customer/package.json
@@ -9,6 +9,7 @@
     "start": "next start --port 3001",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "test:e2e": "playwright test",
     "clean": "rm -rf .next .turbo"
   },
   "dependencies": {
@@ -26,7 +27,9 @@
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
+    "@clerk/testing": "^1.13.35",
     "@juicebox/config": "workspace:*",
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4.1.0",
     "@types/node": "^22.15.0",
     "@types/react": "^19.1.4",
