--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,15 +5,17 @@
   "type": "module",
   "exports": {
     "./eslint": "./eslint.config.js",
+    "./playwright": "./playwright.base.ts",
     "./tsconfig/base": "./tsconfig.base.json",
     "./tsconfig/nextjs": "./tsconfig.nextjs.json"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@playwright/test": "^1.58.2",
     "eslint": "^9.28.0",
     "eslint-config-next": "^16.1.6",
     "eslint-config-prettier": "^10.1.5",
-    "typescript-eslint": "^8.34.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.34.0"
   }
 }
